@@ -40,6 +40,9 @@ ManagedExporterServer = disabled
 ; CheckBuiltinPlugins - Enable builtin plugins from /settings/builtin plugins/... like check_nsc_web
 CheckBuiltinPlugins = disabled
 
+; CheckAlias - Enable script aliases from /settings/external scripts/alias
+CheckAlias = enabled
+
 ; CheckExternalScripts - Enable scripts from /settings/external scripts/...
 CheckExternalScripts = disabled
 
