@@ -5,8 +5,6 @@ import (
 	"os"
 	"path"
 	"path/filepath"
-
-	"pkg/utils"
 )
 
 func init() {
@@ -45,9 +43,6 @@ func (e *ExternalScriptsHandler) Init(snc *Agent, defaultScriptConfig *ConfigSec
 		return err
 	}
 	if err := e.registerWrapped(conf); err != nil {
-		return err
-	}
-	if err := e.registerAliases(conf); err != nil {
 		return err
 	}
 
@@ -115,35 +110,6 @@ func (e *ExternalScriptsHandler) registerWrapped(conf *Config) error {
 			}}
 		} else {
 			return fmt.Errorf("missing command in wrapped external script %s", name)
-		}
-	}
-
-	return nil
-}
-
-func (e *ExternalScriptsHandler) registerAliases(conf *Config) error {
-	// merge alias shortcuts into separate config sections
-	scripts := conf.Section("/settings/external scripts/alias")
-	for name, command := range scripts.data {
-		cmdConf := conf.Section("/settings/external scripts/alias/" + name)
-		if !cmdConf.HasKey("command") {
-			cmdConf.Set("command", command)
-		}
-	}
-
-	// now read all alias into available checks
-	for sectionName := range conf.SectionsByPrefix("/settings/external scripts/alias/") {
-		name := path.Base(sectionName)
-		if name == "default" {
-			continue
-		}
-		cmdConf := conf.Section(sectionName)
-		if command, ok := cmdConf.GetString("command"); ok {
-			f := utils.Tokenize(command)
-			log.Tracef("registered alias script: %s -> %s", name, command)
-			AvailableChecks[name] = CheckEntry{name, func() CheckHandler { return &CheckAlias{command: f[0], args: f[1:], config: cmdConf} }}
-		} else {
-			return fmt.Errorf("missing command in alias script %s", name)
 		}
 	}
 
