@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - enable script aliases without enabling external scripts
+
 0.20     Fri Mar 15 14:12:35 CET 2024
          - add support for perf-syntax
          - check_wmi: add performance data
